tests/lean/mismatch.lean
definition id {A : Type} {a : A} := a
definition o : num := 1

check @id nat o
